--- a/utalkFE/src/app/pages/profiles/profiles.component.css
+++ b/utalkFE/src/app/pages/profiles/profiles.component.css
@@ -5,7 +5,7 @@
     margin: 15px 15%;
     text-align: center;
     box-sizing: border-box;
-    padding:20px;
+    padding: 20px;
 }
 
 #cover-photo {
@@ -18,6 +18,10 @@
     background-attachment: fixed;
 }
 
+#cover-photo input[type="file"] {
+    display: none;
+}
+
 #profile-pic {
     width: 12rem;
     height: 12rem;
@@ -27,6 +31,33 @@
     margin-top: 100px;
     object-fit: cover;
     filter: drop-shadow(0 0 0.75rem #bbb);
+    cursor: pointer;
+    transition: .5s ease;
+}
+
+#profile-container:hover #profile-pic {
+    filter: blur(1px) drop-shadow(0 0 0.75rem #bbb);
+}
+
+#profile-container:hover #upload-text {
+    opacity: 1;
+}
+
+#upload-text {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 37.5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    font-weight: 400;
+    font-family: "Roboto";
+    color: #ddd;
+    font-size: 1.2rem;
+    cursor: pointer;
+    filter: drop-shadow(0 0 0.5rem #000);
 }
 
 form {
@@ -35,10 +66,8 @@ form {
 
 #first-wrapper {
     margin-top: 7rem;
-    padding-top:2rem;
+    padding-top: 2rem;
 }
-
-
 
 form label {
     width: 50%;
@@ -58,7 +87,7 @@ input[type=text], input[type=password], input[type=date] {
     box-sizing: border-box;
     display: block;
     text-align: center;
-    color:#444;
+    color: #444;
 }
 
 .button {
@@ -71,7 +100,7 @@ input[type=text], input[type=password], input[type=date] {
     width: 5rem;
     margin-left: calc(50% - 2.5rem - 10px);
     margin-right: calc(50% - 2.5rem - 10px);
-    border-radius:5px;
+    border-radius: 5px;
     text-align: center;
 }
 
@@ -79,8 +108,6 @@ input[type=date]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     display: none;
 }
-
-
 
 input[type=date]::-webkit-calendar-picker-indicator {
     -webkit-appearance: none;
@@ -91,6 +118,6 @@ input[type=date]::-webkit-calendar-picker-indicator {
     opacity: 0.8;
 }
 
-#last-wrapper{
+#last-wrapper {
     margin-bottom: 5rem;
 }
