Added contact page

--- a/utalkFE/src/app/pages/home/home.component.html
+++ b/utalkFE/src/app/pages/home/home.component.html
@@ -6,5 +6,5 @@
     <a class="menu-link" href="#newsfeed">Newsfeed</a>
     <a class="menu-link" [routerLink]="'/profiles'">Profile</a>
     <a class="menu-link" href="#friends">Friends</a>
-    <a class="menu-link" href="#contact">Contact</a>
+    <a class="menu-link" id="contact-link" [routerLink]="'/contact'">Contact</a>
   </aside>
