Added jsp server url to appcomponent

--- a/utalkFE/src/app/pages/contact/contact.component.html
+++ b/utalkFE/src/app/pages/contact/contact.component.html
@@ -1,5 +1,5 @@
 <app-home></app-home>
 <div class="wrapper">
 <img id="logo" src="../../../assets/logo.png">
-<iframe scrolling="no" src="http://localhost:8080/JSP/contact.jsp"></iframe>
+<iframe id="contact-content" scrolling="no"></iframe>
 </div>
