--- a/utalkFE/src/app/pages/profiles/profiles.component.html
+++ b/utalkFE/src/app/pages/profiles/profiles.component.html
@@ -1,4 +1,6 @@
-<div class="wrapper" id="cover-photo">
+  <div class="wrapper" id="cover-photo">
+  <div id="home-link" [routerLink]="'/home'">Go back home</div>
+
   <label id="profile-container" for="image-input">
     <img src="../../../assets/profile.jpg" id="profile-pic">
     <div id="upload-text">
@@ -13,18 +15,19 @@
   <div class="wrapper" id="first-wrapper">
     <label for="user">Name</label>
     <input *ngIf="profile" id="name" type="text" [(ngModel)]="profile.name" [value]="profile.name"
-      placeholder="John Smith" name="user">
+       name="user">
 
     <label for="pass">Password</label>
-    <input type="password" placeholder="••••••••" name="pass">
+    <input id="password" type="password" placeholder="Change password" [(ngModel)]="currentPassword" name="pass">
   </div>
 
   <div class="wrapper" id="last-wrapper">
     <label for="user">Occupation</label>
-    <input *ngIf="profile" id="occupation" [(ngModel)]="profile.occupation" type="text" placeholder="Software engineer"
-      [value]="profile.occupation" name="ocupation">
+    <input *ngIf="profile" id="occupation" [(ngModel)]="profile.occupation" type="text"
+ 
+    [value]="profile.occupation" name="ocupation">
     <label for="user">Location</label>
-    <input *ngIf="profile" id="location" [(ngModel)]="profile.location" type="text" placeholder="New Jersey"
+    <input *ngIf="profile" id="location" [(ngModel)]="profile.location" type="text" 
       name="location" [value]="profile.location">
     <label for="user">Birthdate</label>
     <input *ngIf="profile" type="date" id="birthdate" [ngModel]="profile.birthdate | date:'yyyy-MM-dd'"
