--- a/utalkFE/src/app/pages/home/home.component.css
+++ b/utalkFE/src/app/pages/home/home.component.css
@@ -37,6 +37,7 @@
     padding: 0 !important;
     font-size: 1.25rem !important;
     margin-bottom:0;
+    filter: drop-shadow(0 0 0.75rem #ffffff);
 }
 
 #menu p {
@@ -70,3 +71,20 @@
 #home-link{
     display:none;
 }
+
+#submenu {
+    visibility: hidden;
+    transition: 0.2s; 
+  }
+
+  #useful-link{
+      cursor: pointer;
+      position: absolute;
+      bottom: 3.8rem;
+  }
+
+  #logout-link{
+      cursor:pointer;
+      position: absolute;
+      bottom: 2.4rem;
+  }
