--- a/utalkFE/src/app/pages/posts/posts.component.html
+++ b/utalkFE/src/app/pages/posts/posts.component.html
@@ -1,5 +1,9 @@
-<app-home></app-home>
-
-<p>
-  posts works!
-</p>
+<div class="wrapper">
+  <div class="content" *ngFor="let post of currentPosts">
+    <div class="post-wrapper">
+      <div class="post-content">{{post.content}}
+      </div>
+      <div class="post-date">Posted on: {{post.posted_on}}</div>
+    </div>
+  </div>
+</div>
