--- a/utalkFE/src/app/pages/friends/friends.component.css
+++ b/utalkFE/src/app/pages/friends/friends.component.css
@@ -11,13 +11,18 @@ app-home{
 
 .wrapper {
     border-radius: 5px;
-    background-color: #ddd;
     margin: 20px 5% 15px 25%;
     height: auto;
     text-align: center;
     box-sizing: border-box;
     padding: 20px;
-    overflow:visible;   
+    overflow:visible;  
+    
+    background-image: url("../../../assets/graybg.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .friend-wrapper{
@@ -43,12 +48,10 @@ app-home{
     width: 4rem;
     height: 4rem;
     object-fit: cover;
-    /* filter: drop-shadow(0 0 0.75rem #ffffff); */
     float:left;
 }
 
 .friend-content{
-    /* border: 1px red solid; */
     width:90%;
     margin-left:5%;
     margin-right:5%;
@@ -56,7 +59,7 @@ app-home{
     display:block;
 
 
-    background-image: linear-gradient(to right, #aaa, #ddd);
+    background-image: linear-gradient(to right, #dfdfdf, rgba(240,240,240, 0.0));
     padding: 5px;
     overflow:visible;   
 }
@@ -67,4 +70,57 @@ app-home{
     text-align:left;
     margin-left:2rem;
 
+}
+
+.button {
+    background-color: #999;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    width: 5rem;
+    margin-left: calc(50% - 2.5rem - 10px);
+    margin-right: calc(50% - 2.5rem - 10px);
+    border-radius: 5px;
+    text-align: center;
+    user-select: none;
+    cursor:pointer;
+    font-family:'Roboto';
+}
+
+.button:hover{
+    background-color: rgba(180,180,180, 0.7);
+}
+
+#first-content{
+    display:none;
+}
+
+#text-input {
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+  }
+
+
+.addFriend-link {
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1rem;
+    font-family: 'Roboto';
+    color: #444;
+    padding-top: 10px;
+    display: block;
+    font-weight: 200;
+    font-size: 0.8rem;
+    cursor:pointer;
+    margin-bottom:1rem;
+}
+
+.addFriend-link:hover {
+    color: rgb(74, 138, 223);
 }
