--- a/utalkFE/src/app/pages/friends/friends.component.html
+++ b/utalkFE/src/app/pages/friends/friends.component.html
@@ -1,4 +1,11 @@
 <div class="wrapper">
+    <div id="search-button" class="button unselectable unclickable" (click)="search()">
+        SEARCH
+    </div>
+    <div class="content" id="first-content">
+        <input id="text-input" type="text" [(ngModel)]="friendSearched" (keypress)="onEnter($event)">
+        <a class="addFriend-link" (click)="addFriend()">Add friend</a>
+    </div>
     <div class="friend-content" *ngFor="let friend of currentFriends">
         <div class="friend-wrapper"> <img class="friend-photo" src="../../../assets/{{friend.photo}}">
             <div class="friend-info">{{friend.name}}
