--- a/utalkFE/src/app/pages/home/home.component.css
+++ b/utalkFE/src/app/pages/home/home.component.css
@@ -55,9 +55,9 @@
 
 #profile-pic {
     border-radius: 50%;
-    width: 8rem;
-    height: 8rem;
-    padding: 5px calc(50% - 4rem);
+    width: 50%;
+    height: 20%;
+    padding: 5px 25%;
     object-fit: cover !important;
     filter: drop-shadow(0 0 0.75rem #ffffff);
 }
@@ -88,3 +88,4 @@
       position: absolute;
       bottom: 2.4rem;
   }
+
