--- a/utalkFE/src/app/pages/site-map/site-map.component.css
+++ b/utalkFE/src/app/pages/site-map/site-map.component.css
@@ -7,15 +7,39 @@ app-home{
     height:100%;
 }
 
-.wrapper {
+.aux-wrapper {
     border-radius: 5px;
     background-color: #ddd;
     width: 70%;
     margin: 20px 5% 15px 25%;
-    height: 25rem;
     position: absolute;
     text-align: center;
     box-sizing: border-box;
     padding: 20px;
-    overflow:visible;   
+}
+
+#my-info{
+    width:100%;
+    border:none;
+    height:100%;
+    display:none;
+}
+
+
+#more-info {
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1rem;
+    font-family: 'Roboto';
+    color: #aaa;
+    padding-top: 10px;
+    display: block;
+    font-weight: 200;
+    font-size: 0.8rem;
+    cursor: pointer;
+}
+
+#more-info:hover {
+    color: rgb(74, 138, 223);
 }
